# ChangeLog for app-xemacs/riece
# Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-xemacs/riece/ChangeLog,v 1.9 2008/03/19 19:57:07 graaff Exp $

  19 Mar 2008; Hans de Graaff <graaff@gentoo.org> metadata.xml:
  A herd should not be listed as maintainer

  25 Nov 2007; Hans de Graaff <graaff@gentoo.org> riece-1.23.ebuild:
  Marked amd64 stable per kingtaco's email to -core

  29 Oct 2007; Raúl Porcel <armin76@gentoo.org> riece-1.23.ebuild:
  sparc stable wrt #197046

  28 Oct 2007; Markus Rothe <corsair@gentoo.org> riece-1.23.ebuild:
  Stable on ppc64; bug #197046

  26 Oct 2007; Christian Faulhammer <opfer@gentoo.org> riece-1.23.ebuild:
  stable x86, bug 197046

  26 Oct 2007; nixnut <nixnut@gentoo.org> riece-1.23.ebuild:
  Stable on ppc wrt bug 197046

  03 Jun 2007; Hans de Graaff <graaff@gentoo.org> riece-1.22.ebuild:
  Stable on amd64, ppc, ppc64, sparc, x86 as per #175560

*riece-1.23 (05 May 2007)

  05 May 2007; Hans de Graaff <graaff@gentoo.org> +riece-1.23.ebuild:
  Version bump: update to upstream 3.1.2, update dependencies

*riece-1.22 (26 Nov 2006)

  26 Nov 2006; Hans de Graaff <graaff@gentoo.org> +metadata.xml,
  +riece-1.22.ebuild:
  Initial version.
