@@ -1,16 +1,14 @@
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA1
 
-DIST riece-1.22-pkg.tar.gz 208168 RMD160 74cde5725de4db36a7f721987e9f658e28467441 SHA1 0a96aa4e65976d6120ff6441bda44143e844b2f4 SHA256 ed9880d7d7f45fc9ed796d29ede31071e055355c763045f2b1d527b45578dc10
 DIST riece-1.23-pkg.tar.gz 221779 RMD160 23ffa2d8ae4a2a6806cbd153d4dd0c8f84943514 SHA1 455bf31aa8a6eb04356ad183983ada79574f80d7 SHA256 deb391da915f0ce432f5d3783ad83588efa5b454f534beeb5830714498cd6264
-EBUILD riece-1.22.ebuild 406 RMD160 1e61ca99fe873efa7400142b40448de21c71df3e SHA1 d12ce8c8c957310c98eb125c37976479c9e8434d SHA256 4bb93b392def53a9b8f9e4ca450b3c3ba8037f465a2282cc9b24c39c230cf67f
 EBUILD riece-1.23.ebuild 429 RMD160 fa7fb9428ea92fe6caa80b1fbbe69fabbbc1e9be SHA1 a1e7a1b7df71938085ab3e0a60129edbe56ba6b0 SHA256 23588ab0622a24d889c110dc771a5d85b6b4c3d92aa25bde63711c7221ea24af
-MISC ChangeLog 1246 RMD160 d6658711316d28c826a5cfb421ad0f303606c83d SHA1 7712484e9a782732b0296dc7a2a975e332be05e5 SHA256 3aa1d22f1f9b3b53752e214c224436a7afdb91ffb07b876ed195d2a61279f961
+MISC ChangeLog 1339 RMD160 d86a1ff9df91e93349b699a1bfbe689cff1c36ab SHA1 809db3434392201592792c827e56a157283bd581 SHA256 914f97c5e2c10c5aa29952e08a09c0303ce9e3fa1461eb66f9b7ca9b8ee8e87b
 MISC metadata.xml 161 RMD160 2ada37e120e2e09389d491679abb808bc1047e2d SHA1 1beb6cc75a12ea6231b2c900f6251f1bb22bf910 SHA256 d896eb54e7e82141c9d5a2e82955cbfa75c030dc5747822a6a2263f6a76a4512
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.7 (GNU/Linux)
 
-iD8DBQFH4XAZQUozDL2JlH4RAqQ5AJ0c3Fgk3GTrcW1xhT57mTKkSvzDEACffAtf
-cM/RVi/9DeqFahUAE1N4378=
-=MMv2
+iD8DBQFIEwOcQUozDL2JlH4RApNyAJ40lANDNWIWnA00v9ikyxSQNpV0JwCfQ0v9
+xbz0tQZoDWomFvs0lljC5i4=
+=1U08
 -----END PGP SIGNATURE-----
