@@ -1,14 +1,0 @@
-# Copyright 1999-2007 Gentoo Foundation
-# Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/app-xemacs/riece/riece-1.22.ebuild,v 1.3 2007/07/11 02:37:37 mr_bones_ Exp $
-
-SLOT="0"
-IUSE=""
-DESCRIPTION="IRC client for Emacs."
-PKG_CAT="standard"
-
-RDEPEND="!app-xemacs/xemacs-packages-sumo
-"
-KEYWORDS="~alpha amd64 ppc ppc64 sparc x86"
-
-inherit xemacs-packages
