@@ -1,6 +1,9 @@
 # ChangeLog for app-xemacs/riece
 # Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-xemacs/riece/ChangeLog,v 1.9 2008/03/19 19:57:07 graaff Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-xemacs/riece/ChangeLog,v 1.10 2008/04/26 10:27:28 graaff Exp $
+
+  26 Apr 2008; Hans de Graaff <graaff@gentoo.org> -riece-1.22.ebuild:
+  Remove old version
 
   19 Mar 2008; Hans de Graaff <graaff@gentoo.org> metadata.xml:
   A herd should not be listed as maintainer
